# ringgrid

./: .gitignore  AGENTS.md  API_REVISION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REVIEW.md  detect.sh  gentarget.sh
.ai/: README.md
.claude/: CLAUDE.md
.github/: dependabot.yml
book/: book.toml  build.sh
crates/conicmark-cli/: Cargo.toml
crates/conicmark-cli/src/: main.rs
crates/ringgrid/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/ringgrid-c/: CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml
crates/ringgrid-c/cmake/: ringgrid-config.cmake.in  ringgrid.pc.in
crates/ringgrid-c/examples/: example.cpp  smoke.c
crates/ringgrid-c/examples/consumer/: CMakeLists.txt
crates/ringgrid-c/include/: ringgrid.h  ringgrid.hpp
crates/ringgrid-c/src/: detect.rs  detector.rs  introspect.rs  lib.rs  mapper.rs  propose.rs  status.rs  tests.rs  util.rs  wire.rs
crates/ringgrid-c/vcpkg/: portfile.cmake  usage  vcpkg.json
crates/ringgrid-cli/: Cargo.toml  config_sample.json
crates/ringgrid-cli/src/: main.rs
crates/ringgrid-core/: Cargo.toml
crates/ringgrid-core/src/: board_layout.rs  board_spec.rs  camera.rs  codebook.rs  codec.rs  conic.rs  debug_dump.rs  detector.rs  edges.rs  homography.rs  lattice.rs  lib.rs  marker_spec.rs  preprocess.rs  projective_center.rs  refine.rs
crates/ringgrid-core/src/conic/: fit.rs
crates/ringgrid-core/src/refine/: pipeline.rs  sampling.rs  solver.rs
crates/ringgrid-core/src/ring/: decode.rs  detect.rs  edge_sample.rs  inner_estimate.rs  mod.rs  outer_estimate.rs  proposal.rs  radial_profile.rs
crates/ringgrid-core/src/ring/detect/: completion.rs  debug_conv.rs  debug_pipeline.rs  homography_utils.rs  inner_fit.rs  marker_build.rs  outer_fit.rs  refine_h.rs
crates/ringgrid-core/src/ring/detect/non_debug/: mod.rs  stage_finalize.rs  stage_fit_decode.rs
crates/ringgrid-core/src/ring/detect/stages/: mod.rs  stage_finalize.rs  stage_fit_decode.rs
crates/ringgrid-core/src/ring/pipeline/: dedup.rs  global_filter.rs
crates/ringgrid-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/ringgrid-py/examples/: basic_detect.py  detect_adaptive.py  detect_multiscale.py  detect_with_camera.py  plot_detection.py
crates/ringgrid-py/python/ringgrid/: __init__.py  __init__.pyi  _api.py  viz.py
crates/ringgrid-py/python/ringgrid/lib_ringgrid.dylib.dSYM/Contents/: Info.plist
crates/ringgrid-py/src/: lib.rs
crates/ringgrid-py/tests/: test_api.py
crates/ringgrid-py/tools/: benchmark_detect_config.py  generate_typing_artifacts.py  typing_artifacts.pyi.template
crates/ringgrid-wasm/: Cargo.toml  README.md
crates/ringgrid-wasm/demo/: index.html
crates/ringgrid-wasm/src/: lib.rs
crates/ringgrid-wasm/tests/: wasm_detect.rs  web.html
crates/ringgrid/benches/: detect_fixture.rs  hotpaths.rs
crates/ringgrid/examples/: basic_detect.rs  detect_with_camera.rs  detect_with_config.rs  detect_with_self_undistort.rs  generate_targets.rs  target.json
crates/ringgrid/examples/targets/: hex_coded.toml  hex_plain_dots.toml  hex_plain_nodots.toml  rect_coded.toml  rect_plain_dots.toml  rect_plain_nodots.toml
crates/ringgrid/src/: api.rs  board_layout.rs  debug_dump.rs  detector.rs  homography.rs  lib.rs  projective_center.rs  refine.rs  self_undistort.rs  target_generation.rs  test_utils.rs
crates/ringgrid/src/cli/: artifacts.rs  detect.rs  mod.rs  recipe.rs
crates/ringgrid/src/conic/: eigen.rs  fit.rs  mod.rs  ransac.rs  types.rs
crates/ringgrid/src/detector/: center_correction.rs  completion.rs  config.rs  dedup.rs  global_filter.rs  homography_utils.rs  inner_as_outer_recovery.rs  inner_fit.rs  marker_build.rs  mod.rs  neighbors.rs  outer_fit.rs  proposal.rs  refine_h.rs
crates/ringgrid/src/detector/config/: fit.rs  mod.rs  scale.rs  stages.rs
crates/ringgrid/src/detector/id_correction/: bootstrap.rs  cleanup.rs  consistency.rs  diagnostics.rs  engine.rs  homography.rs  index.rs  local.rs  math.rs  mod.rs  types.rs  vote.rs  workspace.rs
crates/ringgrid/src/detector/outer_fit/: mod.rs  sampling.rs  scoring.rs  solver.rs
crates/ringgrid/src/homography/: core.rs  correspondence.rs  mod.rs  utils.rs
crates/ringgrid/src/marker/: codebook.rs  codec.rs  decode.rs  diagnostics.rs  marker_spec.rs  mod.rs
crates/ringgrid/src/pipeline/: anchor.rs  assign.rs  axis_ratio_filter.rs  finalize.rs  fit_decode.rs  geometric_verify.rs  mod.rs  multi_pass.rs  prelude.rs  result.rs  run.rs  scale_probe.rs  single_pass.rs  stats.rs  time_compat.rs  two_pass.rs
crates/ringgrid/src/pipeline/finalize/: coded.rs  common.rs  mod.rs  plain.rs
crates/ringgrid/src/pipeline/stages/: mod.rs  stage_finalize.rs  stage_fit_decode.rs
crates/ringgrid/src/pixelmap/: cameramodel.rs  distortion.rs  mod.rs  self_undistort.rs
crates/ringgrid/src/pixelmap/self_undistort/: config.rs  estimator.rs  mod.rs  objective.rs  optimizer.rs  policy.rs  result.rs  tests.rs
crates/ringgrid/src/proposal/: config.rs  gradient.rs  mod.rs  nms.rs  tests.rs  voting.rs
crates/ringgrid/src/refine/: math.rs  pipeline.rs  solver.rs
crates/ringgrid/src/ring/: decode.rs  detect.rs  edge_sample.rs  inner_estimate.rs  mod.rs  outer_estimate.rs  projective_center.rs  proposal.rs  radial_estimator.rs  radial_profile.rs
crates/ringgrid/src/ring/detect/: center_correction.rs  completion.rs  config.rs  debug_conv.rs  homography_utils.rs  inner_fit.rs  marker_build.rs  mod.rs  outer_fit.rs  refine_h.rs  two_pass.rs
crates/ringgrid/src/ring/detect/post/: dedup.rs  mod.rs
crates/ringgrid/src/ring/detect/stages/: mod.rs  stage_finalize.rs  stage_fit_decode.rs
crates/ringgrid/src/ring/pipeline/: global_filter.rs
crates/ringgrid/tests/: facade.rs  plain_target_e2e.rs  target_generation.rs
crates/ringgrid/tests/fixtures/target_generation/: fixture_compact_hex.json
docs/: ARCHITECTURE.md  adaptive_detection_report.md  backlog.md  complexity-audit.md  development.md  handoff-inner-as-outer-recovery.md  module_structure.md  performance.md  pipeline_analysis.md  proposal-performance-analysis.md  radsym-edge-thinning-request.md  (+2 more)
(+302 files in other folders)
