[workspace]
resolver = "2"
members = [
    "crates/ringgrid-core",
    "crates/ringgrid-cli",
]

[workspace.dependencies]
nalgebra = "0.33"
image = "0.25"
imageproc = "0.25"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
approx = "0.5"
rand = "0.8"
tiny-solver = "0.18"
