[workspace]
resolver = "2"
members = [
    "crates/ringgrid",
    "crates/ringgrid-cli",
]
exclude = ["crates/ringgrid-py", "crates/ringgrid-wasm"]

[workspace.package]
version = "0.5.5"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/ringgrid"
homepage = "https://github.com/VitalyVorobyev/ringgrid"
rust-version = "1.88"

[workspace.dependencies]
nalgebra = { version = "0.34", features = ["serde-serialize"] }
image = "0.25"
imageproc = "0.25"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
approx = "0.5"
rand = "0.10"
tiny-solver = "0.18"
png = "0.18"
projective-grid = "0.5"
radsym = "0.1.3"
web-time = "1"