[package]
name = "conicmark-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for circle/ring calibration target detection"

[dependencies]
conicmark-core = { path = "../conicmark-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
