# Standalone workspace root: keeps cargo from folding this binding crate into
# the main workspace (same trick as crates/ringgrid-wasm), so it builds under
# its own toolchain / CMake / vcpkg driver.
[workspace]

[package]
name = "ringgrid-c"
version = "0.11.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "C ABI for the ringgrid ring-target detector."
repository = "https://github.com/VitalyVorobyev/ringgrid"
publish = false

[lib]
name = "ringgrid_c"
# cdylib for shared consumers, staticlib for static linking into C/C++ builds.
crate-type = ["cdylib", "staticlib"]

[dependencies]
ringgrid = { path = "../ringgrid", version = "0.11.0" }
image = { version = "0.25", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Full-featured image (PNG decoder) for the marshalling parity test, which
# decodes a fixture the runtime `default-features = false` dependency cannot.
image = "0.25"

[profile.release]
lto = true
