[package]
name = "ringgrid-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for ringgrid circle/ring calibration target detection"


[[bin]]
name = "ringgrid"
path = "src/main.rs"

[dependencies]
ringgrid = { path = "../ringgrid", default-features = false, features = ["cli-internal"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
