[package]
name = "ringgrid-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for ringgrid circle/ring calibration target detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/ringgrid"
homepage = "https://github.com/VitalyVorobyev/ringgrid"
rust-version = "1.87"


[[bin]]
name = "ringgrid"
path = "src/main.rs"
doc = false

[dependencies]
ringgrid = { path = "../ringgrid" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
