[package]
name = "ringgrid-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "CLI tool for ringgrid circle/ring calibration target detection"


[[bin]]
name = "ringgrid"
path = "src/main.rs"
doc = false

[dependencies]
ringgrid = { path = "../ringgrid" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
