[package]
name = "ringgrid-core"
version = "0.1.0"
edition = "2021"
description = "Core algorithms for ringgrid circle/ring calibration target detection"

[dependencies]
nalgebra = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
tiny-solver = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
