[package]
name = "ringgrid-py"
version = "0.7.0"
edition = "2024"
description = "Python bindings for ringgrid"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/ringgrid"
homepage = "https://github.com/VitalyVorobyev/ringgrid"
rust-version = "1.88"
publish = false

[lib]
name = "_ringgrid"
crate-type = ["cdylib"]

[dependencies]
ringgrid = { path = "../ringgrid", version = "0.7.0" }
pyo3 = { version = "0.29", features = ["extension-module"] }
numpy = "0.29"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
