[package]
name = "ringgrid-py"
version = "0.11.0"
edition = "2024"
description = "Python bindings for ringgrid"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/ringgrid"
homepage = "https://github.com/VitalyVorobyev/ringgrid"
rust-version = "1.88"
publish = false

[lib]
name = "_ringgrid"
crate-type = ["cdylib"]

# Empty workspace table: this crate is excluded from the root workspace and
# builds standalone (it carries its own Cargo.lock). Declaring it explicitly
# lets cargo resolve it correctly even when the checkout is nested inside
# another workspace (e.g. a git worktree under the parent repo).
[workspace]

[dependencies]
ringgrid = { path = "../ringgrid", version = "0.11.0" }
pyo3 = { version = "0.29", features = ["extension-module"] }
numpy = "0.29"
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
