[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ringgrid"
version = "0.2.1"
description = "Python bindings for ringgrid detector"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [
  { name = "Vitaly Vorobyev", email = "vit.vorobiev@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/VitalyVorobyev/ringgrid"
Repository = "https://github.com/VitalyVorobyev/ringgrid"
Documentation = "https://vitalyvorobyev.github.io/ringgrid/book/"

[tool.maturin]
python-source = "python"
module-name = "ringgrid._ringgrid"
