[package]
name = "ringgrid-wasm"
version = "0.5.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/VitalyVorobyev/ringgrid"
homepage = "https://github.com/VitalyVorobyev/ringgrid"
rust-version = "1.88"
description = "WebAssembly bindings for ringgrid ring marker detector"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ringgrid = { path = "../ringgrid", version = "0.5.3", default-features = false }
image = { version = "0.25", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
