[package]
name = "ringgrid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Pure-Rust detector for coded ring calibration targets"
readme = "README.md"
documentation = "https://docs.rs/ringgrid"
authors = ["Vitaly Vorobyev <vit.vorobiev@gmail.com>"]
categories = ["computer-vision", "multimedia::images", "science::robotics"]
keywords = ["computer-vision", "calibration", "fiducial", "marker", "homography"]
include = ["src/**", "examples/**", "README.md", "LICENSE-*", "Cargo.toml"]

[dependencies]
nalgebra = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
tiny-solver = { workspace = true }
png = { workspace = true }
projective-grid = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
criterion = "0.8"

[[bench]]
name = "hotpaths"
harness = false

[[bench]]
name = "detect_fixture"
harness = false
