[package]
name = "ringgrid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Pure-Rust detector for coded ring calibration targets"
readme = "README.md"
documentation = "https://docs.rs/ringgrid"
authors = ["Vitaly Vorobyev <vit.vorobiev@gmail.com>"]
categories = ["computer-vision", "multimedia::images", "science::robotics"]
keywords = ["computer-vision", "calibration", "fiducial", "marker", "homography"]
include = ["src/**", "examples/**", "README.md", "LICENSE-*", "Cargo.toml"]

[features]
default = ["std"]
std = ["dep:png"]
# Build the `ringgrid` command-line tool (target generation + detection).
# Off by default so library users get a clean dependency graph; enable with
# `cargo install ringgrid --features cli`.
cli = ["std", "dep:clap", "dep:toml", "dep:tracing-subscriber"]

[dependencies]
nalgebra = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
png = { workspace = true, optional = true }
projective-grid = { workspace = true }
radsym = { workspace = true }
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[[bin]]
name = "ringgrid"
path = "src/bin/ringgrid.rs"
required-features = ["cli"]
doc = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
imageproc = { workspace = true }
rand = { workspace = true }
criterion = "0.8"

[[bench]]
name = "hotpaths"
harness = false

[[bench]]
name = "detect_fixture"
harness = false
